--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -1,19 +1,33 @@
-.example {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
-    'Open Sans', 'Helvetica Neue', sans-serif;
-  line-height: 1.5;
-  background-color: #fff;
-  color: #424242;
-  max-width: 960px;
-  padding: 16px;
+.timer {
+  display: inline-flex;
+  margin: 50px;
+  // flex-direction: column;
+
+  font-weight: 500;
+  font-size: 14px;
+  background-color: yellow;
 }
 
-.example code {
-  font-family: monospace;
-  font-size: 16px;
-  font-weight: 700;
-  background-color: #009688;
-  color: #fff;
-  padding: 2px 6px;
-  border-radius: 2px;
+.field {
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+.field:not(:last-child) {
+  margin-right: 10px;
+}
+
+.value {
+  font-size: 20px;
+}
+
+.label {
+  font-style: italic;
+  font-weight: bold;
+  font-size: 25px;
+}
+
+.control-buttons {
 }
