--- a/src/partials/example.html
+++ b/src/partials/example.html
@@ -1,21 +1,25 @@
-<div class="timer" id="timer-1">
-  <div class="field">
-    <span class="value" data-value="days">11</span>
-    <span class="label" data-label="days">Days</span>
+<div class="wrapper">
+  <div>
+    <input type="date" id="date-selector" />
+    <button type="button" data-start>Start countdown</button>
   </div>
-
-  <div class="field">
-    <span class="value" data-value="hours">11</span>
-    <span class="label" data-label= "hours">Hours</span>
-  </div>
-
-  <div class="field">
-    <span class="value" data-value="mins">11</span>
-    <span class="label" data-label="mins">Minutes</span>
-  </div>
-
-  <div class="field">
-    <span class="value" data-value="secs">11</span>
-    <span class="label" data-label="secs">Seconds</span>
+  
+  <div class="timer">
+    <div class="field">
+      <span class="value" data-days>00</span>
+      <span class="label">Days</span>
+    </div>
+    <div class="field">
+      <span class="value" data-hours>00</span>
+      <span class="label">Hours</span>
+    </div>
+    <div class="field">
+      <span class="value" data-minutes>00</span>
+      <span class="label">Minutes</span>
+    </div>
+    <div class="field">
+      <span class="value" data-seconds>00</span>
+      <span class="label">Seconds</span>
+    </div>
   </div>
 </div>
