color picker added

--- a/src/sass/timer.scss
+++ b/src/sass/timer.scss
@@ -32,13 +32,13 @@
   font-size: 25px;
 }
 
-button {
+.button-start {
   font-weight: bold;
   padding: 3px;
   background-color: yellowgreen;
 }
 
-button:hover {
+.button-start:hover {
   font-weight: bold;
   background-color: tomato;
 }
