--- a/src/partials/timer.html
+++ b/src/partials/timer.html
@@ -1,9 +1,9 @@
 <div class="wrapper">
   <div>
     <input type="date" id="date-selector" />
-    <button type="button" data-start>Start countdown</button>
+    <button class="button-start" type="button" data-start>Start countdown</button>
   </div>
-  
+
   <div class="timer">
     <div class="field">
       <span class="value" data-days>00</span>
@@ -23,3 +23,4 @@
     </div>
   </div>
 </div>
+
