--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,4 +4,9 @@
  */
 
 // Стили для файла с примером HTML-фрагмента
-@import './example';
+@import './timer';
+@import './color-picker.scss';
+
+body {
+  display: inline-flex;
+}
